Query plan has Replicate Issue but seems to be close to correct